[package]
name = "bssid-track"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
reqwest = "0.12.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
format-bytes = "0.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
rand = "0.9.0"
futures = "0.3.31"
